--- a/JobPortal.WebApp/JobPortal.WebApp.csproj
+++ b/JobPortal.WebApp/JobPortal.WebApp.csproj
@@ -37,4 +37,8 @@
     <ProjectReference Include="..\JobPortal.Data\JobPortal.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\jobs\images\" />
+  </ItemGroup>
+
 </Project>
