--- a/JobPortal.WebApp/JobPortal.WebApp.csproj
+++ b/JobPortal.WebApp/JobPortal.WebApp.csproj
@@ -14,12 +14,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Areas\Employer\Views\Apply\Feedback.cshtml" />
     <Content Remove="Views\Job\Index.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="Areas\Admin\Views\Employer\Index.cshtml" />
-    <None Include="Areas\Employer\Views\Applicant\Index.cshtml" />
+    <None Include="Areas\Employer\Views\Apply\Feedback.cshtml" />
+    <None Include="Areas\Employer\Views\Apply\Index.cshtml" />
     <None Include="Views\Apply\AccessDenied.cshtml" />
     <None Include="Views\Apply\Apply.cshtml" />
     <None Include="Views\Apply\Fail.cshtml" />
