add confirm popup

--- a/JobPortal.Data/JobPortal.Data.csproj
+++ b/JobPortal.Data/JobPortal.Data.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JobPortal.Common\JobPortal.Common.csproj" />
+  </ItemGroup>
+
 </Project>
