--- a/JobPortal.WebApp/JobPortal.WebApp.csproj
+++ b/JobPortal.WebApp/JobPortal.WebApp.csproj
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Company\Index.cshtml" />
+    <Content Remove="Views\Blog\Index.cshtml" />
     <Content Remove="Views\Job\Index.cshtml" />
   </ItemGroup>
 
@@ -21,6 +23,8 @@
     <None Include="Areas\Admin\Views\Employer\Index.cshtml" />
     <None Include="Areas\Employer\Views\Apply\Index.cshtml" />
     <None Include="Views\Apply\Apply.cshtml" />
+    <None Include="Views\Company\Index.cshtml" />
+    <None Include="Views\Blog\Index.cshtml" />
     <None Include="Views\Job\Index.cshtml" />
     <None Include="Views\Shared\Components\Category\Default.cshtml" />
     <None Include="Views\Shared\Components\Time\Default.cshtml" />
